# Labo7_Labino

./: .gitignore  README.md
Analisis/: plot.ipynb  plot.py  test.py
LabinoCompleto/: Balanzas.h  LabinoCompleto.ino  MovementManager.h  PROGMEMUtils.h  PWMHelper.h  PumpManager.h  ServoManager.h  SmartSerial.h  StaticDeque.h  ULN2003.h
RPi/: arduino_controller.py  balanzas.json  balanzas.py  camera_controller.py  config.py  dataclass_save.py  file_manager.py  logging_helper.py  main.py  maintenance_circuit.py  requirements.txt  requirements_rpi.txt  schedule_tester.py  serial_manager.py  server.py  smart_array.py  systems.py  systems_manager.py  test.py  test2.py  type_hints.py  utils.py
RPi/dummy_classes/: dummy_maintenance_circuit.py  dummy_picamera.py  dummy_serial.py
RPi/smart_arrays/: __init__.py  _check_dependencies.py  _generic_operations.py  _utils.py  smart_array.py  smart_array_base.py  stats.py  uncertainties_array.py  utils.py
labino_rust/: Cargo.toml
labino_rust/src/: balanzas.rs  intensity_config.rs  logger_config.rs  main.rs  serial_manager.rs  systems.rs  utils.rs  watering_position.rs  watering_schedule.rs
