[package]
name = "labino_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
itertools = "0.13.0"
lazy_static = "1.4.0"
log = "0.4.21"
log4rs = "1.3.0"
serde = "1.0.201"
serde_derive = "1.0.201"
serde_json = "1.0.117"
serialport = "4.3.0"
thiserror = "1.0.61"
